@@ -83,6 +83,7 @@ Trunk (unreleased changes)
    HADOOP-2414 Fix ArrayIndexOutOfBoundsException in bloom filters.
    HADOOP-2430 Master will not shut down if there are no active region servers
    HADOOP-2199 Add tools for going from hregion filename to region name in logs
+   HADOOP-2441 Fix build failures in TestHBaseCluster
    
   IMPROVEMENTS
    HADOOP-2401 Add convenience put method that takes writable
